# private-ec2

./: app.py  pyproject.toml
private_ec2/: private_ec2_stack.py
tests/unit/: test_private_ec2_stack.py
