[project]
name = "private-ec2"
readme = "README.md"
version = "3.12"
description = "Build EC2 in private network environment."

[tool.ruff]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle
    "W",   # pycodestyle
    "C90", # mccabe
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "T20", # flake8-print
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PGH", # pygrep-hooks
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]

ignore = [
    "S101",   # For None check in cdk
    "S311",   # suspicious-non-cryptographic-random-usage
    "ARG001", # lambda_handler
    "TRY400", # Use traceback.format_exc
]

extend-exclude = [
    "cdk.out", # CDK synthesized cloud assembly
    "docs",    # documents directory
    ".layers", # lambda layer
]

[tool.ruff.per-file-ignores]
"tests/**.py" = [
    "ANN001",  # test fixtures
    "ANN201",  # Missing return type annotation
    "PLR2004", # magic-value-comparison
]

[tool.mypy]
python_version = "3.12"
show_error_context = true     # エラー時のメッセージを詳細表示
show_column_numbers = true    # エラー発生箇所の行数/列数を表示
ignore_missing_imports = true # import 先のチェックを行わない (デフォルトだとサードパーティーライブラリまでチェックする)
disallow_untyped_defs = false # 関数定義の引数/戻り値に型アノテーション必須 (lambda_handler)
no_implicit_optional = true   # デフォルト引数に None を取る場合型アノテーションに Optional 必須
warn_return_any = true        # 戻り値が Any 型ではない関数の戻り値の型アノテーションが Any のとき警告
warn_unused_ignores = true    # mypy エラーに該当しない箇所に `# type: ignore` コメントが付与されていたら警告
warn_redundant_casts = true   # 冗長なキャストに警告
explicit_package_bases = true # duplicate module named xx

exclude = [
    "cdk.out", # CDK synthesized cloud assembly
    "docs",    # documents directory
    ".layers", # lambda layer
]